Build numpad_3x3 shield (USB + Studio)66

--- a/zephyr/module.yml
+++ b/zephyr/module.yml
@@ -2,6 +2,6 @@ name: zmk-keyboard-numpad-3x3
 build:
   cmake: .
   kconfig: Kconfig
-  board_root: .
-  dts_root: .
-  shield_root: .
+  board_root: config
+  dts_root: config
+  shield_root: config
