--- a/config/numpad_3x3.conf
+++ b/config/numpad_3x3.conf
@@ -1,2 +1,10 @@
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_STUDIO=y
+
+# Enable display
+CONFIG_ZMK_DISPLAY=y
+
+# Enable additional widgets for the display
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_WPM=y
