--- a/config/numpad_3x3.conf
+++ b/config/numpad_3x3.conf
@@ -3,6 +3,11 @@ CONFIG_ZMK_STUDIO=y
 
 # Enable display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_SSD1306=y
+
+# Temporarily disable sleep for testing
+CONFIG_ZMK_SLEEP=n
 
 # Enable additional widgets for the display
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
