--- a/config/numpad_3x3.conf
+++ b/config/numpad_3x3.conf
@@ -6,8 +6,16 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_SSD1306=y
 
+# I2C Configuration
+CONFIG_I2C=y
+CONFIG_GPIO=y
+
 # Temporarily disable sleep for testing
 CONFIG_ZMK_SLEEP=n
+
+# Debug logging (temporary)
+CONFIG_LOG=y
+CONFIG_ZMK_LOG_LEVEL_DBG=y
 
 # Enable additional widgets for the display
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
