--- a/config/numpad_3x3.conf
+++ b/config/numpad_3x3.conf
@@ -6,6 +6,13 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_SSD1306=y
 
+# LVGL Configuration for Monochrome Display
+CONFIG_LV_COLOR_DEPTH_1=y
+CONFIG_LV_COLOR_DEPTH=1
+CONFIG_LV_Z_BITS_PER_PIXEL=1
+CONFIG_LV_Z_VDB_SIZE=64
+CONFIG_LV_DPI_DEF=148
+
 # I2C Configuration
 CONFIG_I2C=y
 CONFIG_GPIO=y
