--- a/config/numpad_3x3.conf
+++ b/config/numpad_3x3.conf
@@ -16,8 +16,17 @@ CONFIG_LV_DPI_DEF=148
 CONFIG_I2C=y
 CONFIG_GPIO=y
 
-# Temporarily disable sleep for testing
-CONFIG_ZMK_SLEEP=n
+# Bluetooth Configuration
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+CONFIG_BT_MAX_CONN=5
+CONFIG_BT_MAX_PAIRED=5
+
+# Battery Service for BT devices
+CONFIG_BT_BAS=y
+
+# Enable sleep for better battery life
+CONFIG_ZMK_SLEEP=y
 
 # Debug logging (temporary)
 CONFIG_LOG=y
